# arxiv-paper-discovery

./: .gitignore  CLAUDE.md  README.md  group_to_index.json  pyproject.toml  readme.md
configs/: sciber_kaggle.yaml  scibert.yaml  scibert_classification.yaml  scibert_kaggle.yaml  scibert_sweep.yaml
notebooks/: 01_raw_data_exploration.ipynb  02_processed_data_exploration.ipynb  03_tokenization_exploration.ipynb  04_model_architecture.ipynb  05_training_visualization.ipynb  exploration.ipynb
outputs/: test_predictions.jsonl
outputs/analysis/: base_label_distribution.csv  test_taxonomy_label_distribution.csv  train_taxonomy_label_distribution.csv  val_taxonomy_label_distribution.csv
scripts/: 01_get_data.sh  02_create_base_dataset.py  03_build_taxonomy_dataset.py  04_tokenize_dataset.py  create_base_dataset.py  eval_test_set.py  get_data.sh  prepare_classification_features.py  run_eval.py  run_experiment.py  run_inference.py  run_serve.py  run_training.py  sample_dataset.py  sample_tok_scibert_train_val.py  serve.py  tune_threshold.py
src/arxiv_paper_discovery/: config.py  data.py  label_taxnomy.py  label_taxonomy.py  models.py  predictor.py  train.py  utils.py
src/arxiv_paper_discovery/web/: __init__.py  dashboard.html
